# optimal-execution-engine

./: README.md  __init__.py  __main__.py  config.py  pyproject.toml  requirements.txt  utils.py
analytics/: stress_tests.py  summary_stats.py
book/: queue_model.py
configs/: base.yaml  event_day.yaml  high_vol_low_liquidity.yaml  low_vol_high_liquidity.yaml  trending_market.yaml
cost/: benchmark_metrics.py
examples/: run_end_to_end_example.py
execution_engine/: example_runner.py  types.py
execution_engine/analytics/: __init__.py
execution_engine/book/: fill_model.py  lob_state.py
execution_engine/cost/: transaction_costs.py
execution_engine/impact/: __init__.py  linear_impact.py  permanent_impact.py
execution_engine/market/: price_process.py  volatility_model.py  volume_profile.py
execution_engine/optimization/: constraints.py  deterministic_solver.py  frontier.py
execution_engine/simulation/: scenario_runner.py
execution_engine/strategies/: adaptive_policy.py
execution_engine/visualization/: dashboard_data.py  plots_costs.py
impact/: calibration.py  square_root_impact.py  transient_impact.py
market/: __init__.py  spread_model.py
notebooks/: 01_market_impact_model_exploration.ipynb  02_execution_strategy_comparison.ipynb  03_sensitivity_analysis.ipynb  04_frontier_visualization.ipynb
optimization/: __init__.py  stochastic_solver.py
reports/: assumptions.md  findings.md  methodology.md
simulation/: backtest_runner.py  monte_carlo.py  simulator.py
src/execution_engine/: constants.py
strategies/: __init__.py  almgren_chriss.py  implementation_shortfall.py  twap.py  vwap.py
tests/: test_end_to_end.py  test_execution_costs.py  test_impact_models.py  test_optimizer.py  test_simulator.py  test_strategy_constraints.py
(+15 files in other folders)
