[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimal-execution-engine"
version = "0.1.0"
description = "Stylized microstructure-aware optimal execution research framework."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
]

[project.scripts]
optimal-execution = "execution_engine.__main__:main"
optimal-execution-example = "execution_engine.example_runner:cli_main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
